Gym location mapping and workouts recyclerviews

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#069198</color>
+    <color name="tabtext">#fff</color>
     <color name="basicColor">
         #6666ff
     </color></resources>
