--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="album_cover_height">150dp</dimen>
+    <dimen name="album_title_padding">16dp</dimen>
+    <dimen name="album_title">16dp</dimen>
 </resources>
