--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -122,7 +122,8 @@
             android:paddingRight="5dp"
             android:text="Register Here"
             android:textColor="@color/colorAccent"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:onClick="launchSignUp"/>
 
 
     </LinearLayout>
