--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -39,10 +39,10 @@
         android:layout_width="400dp"
         android:layout_height="60dp"
         android:background="#11000000"
-        android:drawableStart="@drawable/ic_phone"
+        android:drawableStart="@drawable/ic_person"
         android:ems="10"
-        android:hint="Phone Number"
-        android:inputType="phone"
+        android:hint="Name"
+        android:inputType="text"
         android:textSize="16dp"
         android:textColor="#ffffff"
         android:drawablePadding="10dp"
@@ -50,6 +50,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/editText"
         />
+
 
     <EditText
         android:id="@+id/editText3"
@@ -96,13 +97,14 @@
         android:layout_height="50dp"
         android:background="@color/colorAccent"
         android:elevation="10dp"
-        android:id="@+id/login_button"
+        android:id="@+id/signup_button"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:layout_below="@id/editText4"
         android:text="SIGN UP"
         android:textColor="#fff"
-        android:textSize="18sp"/>
+        android:textSize="18sp"
+        />
     <!-- Login progress -->
     <LinearLayout
         android:id="@+id/linearLayout"
