--- a/app/src/main/res/layout/gym_row.xml
+++ b/app/src/main/res/layout/gym_row.xml
@@ -2,99 +2,50 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="120dp"
 
     android:layout_margin="15dp"
     >
     <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/gym_card_view"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        card_view:cardCornerRadius="8dp"
-        android:gravity="center"
-
-        >
-        <RelativeLayout
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
+            android:orientation="horizontal"
+
+
             >
-            <ImageView
-                android:id="@+id/gym_image"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/album_cover_height"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:clickable="true"
-                android:scaleType="fitXY"/>
-            <TextView
-                android:id="@+id/gym_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/gym_image"
-                android:paddingLeft="@dimen/album_title_padding"
-                android:paddingRight="@dimen/album_title_padding"
-                android:paddingTop="@dimen/album_title_padding"
-                android:textColor="#000"
-                android:textSize="@dimen/album_title"
-                />
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/gym_name"
-                android:layout_marginLeft="@dimen/album_title_padding"
-                android:gravity="center">
-                <TextView
-                    android:layout_width="160dp"
-                    android:layout_height="match_parent"
-                    android:text="Rating: "
-                    android:id="@+id/rating_id"
-                    android:paddingLeft="@dimen/album_title_padding"
-                    android:textSize="20sp"
-
-                    />
-                <TextView
-                    android:layout_width="160dp"
-                    android:layout_height="match_parent"
-                    android:text="Distance: "
-                    android:paddingLeft="@dimen/album_title_padding"
-                    android:textSize="20sp"
-
-                    />
-            </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:gravity="center"
-                android:paddingBottom="10dp">
-                <Button
-                    android:layout_width="160dp"
+                android:orientation="vertical"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="30dp">
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:text="Get Directions"
-                    android:layout_marginRight="3dp"
-                    android:textColor="#fff"
-                    android:background="@color/colorAccent"
-                    android:id="@+id/getDirections_button"
+                    android:drawableLeft="@drawable/ic_place"
+                    android:id="@+id/gym_name"
+                    android:textSize="19sp"
+
                     />
-                <Button
-                    android:layout_width="160dp"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:text="Trainers"
-                    android:layout_marginRight="3dp"
-                    android:textColor="#fff"
-                    android:id="@+id/viewTrainers_button"
-                    android:background="@color/colorAccent"
+                    android:drawableLeft="@drawable/ic_timeline"
+                    android:layout_marginTop="20dp"
+                    android:id="@+id/gym_distance"
+                    android:textSize="19sp"
+
                     />
+
+
 
             </LinearLayout>
 
-        </RelativeLayout>
-        
 
-
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
