--- a/app/src/main/res/layout/trainer_row.xml
+++ b/app/src/main/res/layout/trainer_row.xml
@@ -2,13 +2,14 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
+    android:layout_height="190dp"
+
 
     android:layout_margin="15dp"
     >
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -19,6 +20,7 @@
             <ImageView
             android:layout_width="140dp"
             android:layout_height="match_parent"
+                android:id="@+id/gym_image_id"
             />
             <LinearLayout
                 android:layout_width="match_parent"
@@ -29,29 +31,40 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Name"
+                    android:drawableLeft="@drawable/ic_place"
+                    android:id="@+id/gym_name"
+
+                    android:textSize="19sp"
 
                     />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Gym"
+                    android:drawableLeft="@drawable/ic_timeline"
                     android:layout_marginTop="20dp"
+                    android:id="@+id/gym_opening"
+                    android:textSize="19sp"
 
                     />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Rating"
-                    android:layout_marginTop="20dp"/>
-                <Button
-                    android:layout_marginTop="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:text="View Trainer"
-                    android:textColor="#fff"
-                    android:background="@color/colorAccent"
+                    android:drawableLeft="@drawable/ic_timeline"
+                    android:layout_marginTop="20dp"
+                    android:id="@+id/gym_closing"
+                    android:textSize="19sp"
+
                     />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ic_distance"
+                    android:layout_marginTop="20dp"
+                    android:id="@+id/gym_distance"
+                    android:textSize="19sp"
+
+                    />
+
 
             </LinearLayout>
 
