--- a/app/src/main/res/layout/workout_activity.xml
+++ b/app/src/main/res/layout/workout_activity.xml
@@ -2,6 +2,8 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
+
+    android:orientation="vertical"
     >
 
     <android.support.v7.widget.RecyclerView
@@ -10,5 +12,15 @@
         android:layout_height="wrap_content"
         android:clipToPadding="false"
         android:scrollbars="vertical" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:src="@drawable/ic_plus"
+        android:background="@color/startblue"
+        android:layout_margin="16dp"
+        android:onClick="openCreateWorkoutPage"/>
 
 </LinearLayout>
